--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
+/.firebase
+.firebaserc
+firebase.json
 
 # testing
 /coverage
@@ -17,6 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
